...
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.MainActivity"
        android:backgroundTintMode="add"
        android:animateLayoutChanges="true"
        android:id="@+id/coordinatorLayout"
        android:clipChildren="true">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:fitsSystemWindows="true"
            android:layout_height="@dimen/app_bar_height"
            android:layout_width="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/transparent"
            app:elevation="0dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/toolbar_layout"
                android:fitsSystemWindows="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:toolbarId="@+id/toolbar"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
                app:title="My Pills"
                app:statusBarScrim="@color/transparent"
                app:expandedTitleTextAppearance="@style/TextAppearance.App.CollapsingToolbar.Expanded.WithSize"
                app:expandedTitleGravity="center_vertical"
                app:collapsedTitleTextAppearance="@style/TextAppearance.App.CollapsingToolbar.Collapsed"
...
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton


            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:id="@+id/fab"
            android:onClick="fabButton"
            android:layout_marginEnd="16dp"
            android:text="Add Item"
            android:layout_gravity="bottom|end"
            app:icon="@android:drawable/ic_input_add"
            android:layout_marginBottom="16dp" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>
