<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="8dp"
        android:paddingVertical="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="5dp"
        style="@style/CardView.DayNight"
        android:layout_marginHorizontal="6dp"
        android:layout_marginVertical="6dp"
        android:id="@+id/cardView"
        app:cardMaxElevation="16dp"
        android:animateLayoutChanges="true"
        app:cardElevation="8dp">
    <!-- app:layout_constraintDimensionRatio="1:1" -->


    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="12dp"
            android:paddingVertical="12dp">

        <TextView
                android:text="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/stockTV"
                android:layout_weight="0"
                android:textSize="18sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_baseline_add_24"
                android:id="@+id/refillButton"
                android:background="?android:selectableItemBackgroundBorderless"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/stockTV"
                android:layout_marginTop="25dp" />

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/nameTV"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="18sp"
                android:layout_marginVertical="0dp"
                android:baselineAligned="false"
                android:gravity="center_vertical"
                android:text="Name"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/stockTV"
                android:layout_marginEnd="5dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:autoSizeMaxTextSize="18sp"
                android:autoSizeMinTextSize="14sp"
                android:autoSizeTextType="uniform" />

        <TextView
                android:text="TextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/lastTakenTV"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:autoSizeMinTextSize="11sp"
                android:autoSizeMaxTextSize="14sp"
                android:textColor="@android:color/tab_indicator_text"
                app:layout_constraintEnd_toStartOf="@+id/refillButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
