<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".activities.FormActivity">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:fitsSystemWindows="true"
            android:layout_height="@dimen/app_bar_height"
            android:layout_width="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/transparent"
            app:elevation="0dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/toolbar_layout"
                android:fitsSystemWindows="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:toolbarId="@+id/toolbar"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:contentScrim="@color/primaryColor"
                app:statusBarScrim="@color/transparent"
                app:expandedTitleTextAppearance="@style/TextAppearance.App.CollapsingToolbar.Expanded"
                app:expandedTitleGravity="center_vertical"
                app:collapsedTitleTextAppearance="@style/TextAppearance.App.CollapsingToolbar.Collapsed"
                android:background="@color/transparent"
                app:expandedTitleMarginStart="23dp"
                app:expandedTitleMargin="0dp"
                app:expandedTitleMarginTop="40dp"
                app:title=" ">

            <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_width="match_parent"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/Theme.pillBox.PopupOverlay"
                    app:titleMargin="4dp">

                <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_baseline_close_24"
                        android:id="@+id/cancelButton"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:background="?android:selectableItemBackgroundBorderless"
                        android:layout_gravity="start"
                        android:onClick="cancelButton" />

                <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_baseline_check_24"
                        android:id="@+id/okButton"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:background="?android:selectableItemBackgroundBorderless"
                        android:layout_gravity="end"
                        android:onClick="okButton" />

            </androidx.appcompat.widget.Toolbar>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/editName"
                    android:layout_weight="0"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginEnd="20dp"
                    android:paddingBottom="10dp"
                    android:layout_gravity="bottom"
                    app:layout_collapseMode="parallax"
                    android:fontFamily="@font/montserrat"
                    android:textColor="@color/transparent"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="5dp"
                    android:hint="Title" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:fillViewport="true">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                    android:text="Current Stock"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="23dp"
                    android:layout_marginRight="23dp"
                    android:layout_weight="0"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:id="@+id/textView"
                    android:fontFamily="@font/montserrat" />

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/editStock"
                    android:layout_weight="0"
                    android:inputType="number|none"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:hint="0"
                    android:fontFamily="sans-serif" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                    android:text="@string/show_in_widget"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="23dp"
                    android:layout_marginEnd="20dp"
                    android:id="@+id/widgetSwitch"
                    android:layout_weight="0"
                    android:fontFamily="@font/montserrat" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <Button
            android:text="Delete Item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/deleteButton"
            android:layout_weight="0"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="20dp"
            android:onClick="deleteButton" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>