...
                        android:fontFamily="sans-serif-medium" />

                <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:id="@+id/rvColors"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="10dp"
                        android:overScrollMode="never"
                        tools:visibility="gone" />
...
